--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          Diğer Uygulamalar: <a href="http://www.luckypatcher.mobi">Lucky Patcher</a>
+         <a href="https://sonsurum.club/binkw32-dll-indir/">Binkw32-dll</a>
             </footer>
       </div>
     </div>
