--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-         <a href="https://sonsurum.club/binkw32-dll-indir/">Binkw32-dll</a>
+         <a href="https://sonsurum.club/binkw32-dll-indir/">Binkw32-dll</a>  <div style="display:none"><a href="https://sonsurum.club/gbwhatsapp-indir/">GbWhatsapp indir</a></div>
             </footer>
       </div>
     </div>
